Bledner proportional tool go to inf by it self #48689

Closed
opened 2016-06-20 15:54:33 +02:00 by kin malmin · 16 comments

System Information
Windows 8.1 64bit
nvidia gforce gtx 980M
intel core i7
16gb ram

Blender Version
Broken: (2.77a)
Worked: (optional)

Short description of error
The proportional reset itself to inf.

Exact steps for others to reproduce the error
when i enable the proportional, and try to use it, the tool remove objects,
and go to inf.
And if i type 1, it go to inf.
bug help1.blend

**System Information** Windows 8.1 64bit nvidia gforce gtx 980M intel core i7 16gb ram **Blender Version** Broken: (2.77a) Worked: (optional) **Short description of error** The proportional reset itself to inf. **Exact steps for others to reproduce the error** when i enable the proportional, and try to use it, the tool remove objects, and go to inf. And if i type 1, it go to inf. [bug help1.blend](https://archive.blender.org/developer/F317786/bug_help1.blend)
Author

Changed status to: 'Open'

Changed status to: 'Open'
Author

Added subscriber: @DeadDrag0

Added subscriber: @DeadDrag0

Added subscriber: @NikoLeopold

Added subscriber: @NikoLeopold

Similar to #23288.

What exactly did you do to get the proportional size to inf? Can you provide us with exact steps so we can reproduce the issue?

Also could not reset it via the property in the UI (Tool shelf), but using bpy.context.tool_settings.proportional_size = 1 works.

Similar to #23288. What exactly did you do to get the proportional size to `inf`? Can you provide us with exact steps so we can reproduce the issue? Also could not reset it via the property in the UI (Tool shelf), but using `bpy.context.tool_settings.proportional_size = 1` works.

Added subscriber: @SpectreFirst

Added subscriber: @SpectreFirst

Couple of my own observations, not very helpful this time, but maybe they will point something out.

  • When I load provided file, my Properties panel behave very strangely: all buttons and fields become twice as large as they should be!
  • I have disabled “Load UI” option in User Preferences, restarted Blender and tried again: middle Cube's coordinates show -1.#IND, clicking through them changes them into -1.00000; using Proportional editing show inf, but if I scroll my mouse, it changes to 1000.0 and starts to work as expected. I should also mention that if I don’t disable “Load UI”, this trick doesn’t seem to work.
  • Appending objects into a new scene doesn’t change much except when I click through Cube’s -1.#IND and they change to -1.00000, Proportional editing starts to work right away at 1.0 size.

Frankly speaking, I have no idea what's going on, but maybe there was something in the scene itself that made this glitch?

Couple of my own observations, not very helpful this time, but maybe they will point something out. - When I load provided file, my Properties panel behave very strangely: all buttons and fields become twice as large as they should be! - I have disabled “Load UI” option in User Preferences, restarted Blender and tried again: middle Cube's coordinates show -1.#IND, clicking through them changes them into -1.00000; using Proportional editing show inf, but if I scroll my mouse, it changes to 1000.0 and starts to work as expected. I should also mention that if I don’t disable “Load UI”, this trick doesn’t seem to work. - Appending objects into a new scene doesn’t change much except when I click through Cube’s -1.#IND and they change to -1.00000, Proportional editing starts to work right away at 1.0 size. Frankly speaking, I have no idea what's going on, but maybe there was something in the scene itself that made this glitch?

Added subscriber: @VukGardasevic

Added subscriber: @VukGardasevic

In #48689#379064, @SpectreFirst wrote:
Couple of my own observations, not very helpful this time, but maybe they will point something out.

  • When I load provided file, my Properties panel behave very strangely: all buttons and fields become twice as large as they should be!

They are just zoomed in. Use control + middle button press and drag the mouse down to zoom out.

I can confirm the issue too. The proportional size is inf.
The annoying thing is that even you set it to 1 in the redo panel it goes back to inf on the next run.

> In #48689#379064, @SpectreFirst wrote: > Couple of my own observations, not very helpful this time, but maybe they will point something out. > - When I load provided file, my Properties panel behave very strangely: all buttons and fields become twice as large as they should be! They are just zoomed in. Use control + middle button press and drag the mouse down to zoom out. I can confirm the issue too. The proportional size is inf. The annoying thing is that even you set it to 1 in the redo panel it goes back to inf on the next run.

D2064 is a possible fix. Waiting for review for now.

[D2064](https://archive.blender.org/developer/D2064) is a possible fix. Waiting for review for now.

Added subscriber: @mont29

Added subscriber: @mont29

We really need to know how you manage to get inf value here, this is not supposed to happen ever…

We really need to know **how** you manage to get inf value here, this is not supposed to happen ever…

I think I was able to reproduce this on empty scene on fad0c33 build! I was able to easily get my proportional size to infinity!

  1. Start Blender and switch the default perspective window to ORTHO mode.
  2. Select Translate, Enable Proportional editing, start dragging the cube and hold Page Up button to increase the size of proportional editing.

In perspective mode your proportional editing size will stuck at 1000.0 while in ortho mode it will raise infinitely. I was able to get it to infinity by simply holding Page Up for a minute or so.

I think I was able to reproduce this on empty scene on fad0c33 build! I was able to easily get my proportional size to infinity! 1. Start Blender and switch the default perspective window to ORTHO mode. 2. Select Translate, Enable Proportional editing, start dragging the cube and hold Page Up button to increase the size of proportional editing. In perspective mode your proportional editing size will stuck at 1000.0 while in ortho mode it will raise infinitely. I was able to get it to infinity by simply holding Page Up for a minute or so.

Confirmed. In Ortho mode holding Page Up will raise the proportional size to infinity.

Confirmed. In Ortho mode holding Page Up will raise the proportional size to infinity.

This issue was referenced by 37560e77e8

This issue was referenced by 37560e77e8919a47f6607af5dfb356a8fa70a6f8

Yep, was not correctly clamped to sane values (you could also keep dividing it with minus operation [page down] until reaching other issues...). Fix incoming.

Yep, was not correctly clamped to sane values (you could also keep dividing it with minus operation [page down] until reaching other issues...). Fix incoming.

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
6 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#48689
No description provided.