Fix T48689: Transform proportional size was not seriously clamped.

Now use same, reasonable min/max values, to avoid getting inf or zero values when
using shortcuts during transform operation...